# workshop-strucutred-project

./: .README.md  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
