[tool.poetry]
name = "workshop-project"
version = "0.1.0"
description = ""
authors = ["Marco"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
isort = "^5.13.2"
pip-audit = "^2.7.3"
mkdocs = "^1.6.0"
mkdocstrings-python = "^1.10.7"
pygments = "^2.18.0"
mkdocs-material = "^9.5.31"
pymdown-extensions = "^10.9"
pre-commit = "^3.8.0"
black = "^24.8.0"
pydocstyle = "^6.3.0"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 app/main.py"
